# wuwa_race_2nd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: example_names.txt  example_track.txt  map1.txt  map2.txt
docs/: RULES.md  TECHNICAL.md
include/wuwa/: race.hpp
src/: main.cpp  scenario.cpp  scenario_io.cpp  sim_cpu.cpp  sim_cuda.cu  trace_decode.cpp
